--- a/src/app.scss
+++ b/src/app.scss
@@ -29,8 +29,8 @@
     @apply ml-1 mr-0;
   }
 }
-.input{
-  @apply my-9 py-3 px-5 max-w-[100%] w-[100%] rounded-xl border-2 border-[#988371] font-medium text-lg text-[#000] focus:outline-none;
+.input {
+  @apply my-9 py-3 px-5 max-w-[100%] w-[100%] rounded-xl border-2 border-[#988371] font-medium text-lg text-[#000] focus:outline-none relative;
 }
 
 .main-slider {
@@ -57,7 +57,7 @@
   .swiper-slide:nth-child(3n) {
     background-color: #b5a596;
   }
-  &__add{
+  &__add {
     .swiper-slide:nth-child(1n) {
       background-color: transparent;
     }
@@ -66,7 +66,7 @@
     }
     .swiper-slide:nth-child(3n) {
       background-color: transparent;
-    } 
+    }
   }
   @media (max-width: 375px) {
     .swiper {
