--- a/src/app.scss
+++ b/src/app.scss
@@ -14,81 +14,81 @@
 .button {
   @apply px-4 py-2 flex items-center border-2 rounded-xl hover:cursor-pointer select-none border-[#988371] text-[#988371] active:bg-[#c9b7a7];
 }
-.word {
-  @apply rounded w-[100%] text-center px-1 py-[5%] sm:px-2 sm:py-[10%] h-[100%] flex flex-col justify-around;
-  &__text {
-    @apply font-semibold text-xl text-white transition-all text-center;
-  }
-  & + & {
-    margin-top: 12px;
-  }
-}
-.btn-text {
-  @apply text-[#988371] text-lg font-medium mr-1;
-  &-left {
-    @apply ml-1 mr-0;
-  }
-}
-.input {
-  @apply my-9 py-3 px-5 max-w-[100%] w-[100%] rounded-xl border-2 border-[#988371] font-medium text-lg text-[#000] focus:outline-none relative;
-}
-.vis-hidden {
-  visibility: hidden;
-}
-
-// .main-slider {
-//   .swiper {
-//     max-width: 320px;
-//     width: 100%;
-//     height: 460px;
+// .word {
+//   @apply rounded w-[100%] text-center px-1 py-[5%] sm:px-2 sm:py-[10%] h-[100%] flex flex-col justify-around;
+//   &__text {
+//     @apply font-semibold text-xl text-white transition-all text-center;
 //   }
-//   .swiper-slide {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     border-radius: 18px;
-//     font-size: 22px;
-//     font-weight: bold;
-//     color: #fff;
-//   }
-//   .swiper-slide:nth-child(1n) {
-//     background-color: #c2aa94;
-//   }
-//   .swiper-slide:nth-child(2n) {
-//     background-color: #c9b7a7;
-//   }
-//   .swiper-slide:nth-child(3n) {
-//     background-color: #b5a596;
-//   }
-//   &__add {
-//     .swiper-slide:nth-child(1n) {
-//       background-color: transparent;
-//     }
-//     .swiper-slide:nth-child(2n) {
-//       background-color: transparent;
-//     }
-//     .swiper-slide:nth-child(3n) {
-//       background-color: transparent;
-//     }
-//   }
-//   @media (max-width: 375px) {
-//     .swiper {
-//       max-width: 290px;
-//       width: 100%;
-//       height: 340px;
-//     }
-//   }
-//   @media (max-width: 350px) {
-//     .swiper {
-//       max-width: 260px;
-//       width: 100%;
-//       height: 300px;
-//     }
-//   }
-
-//   @media (max-height: 600px) {
-//     .swiper {
-//       height: 260px;
-//     }
+//   & + & {
+//     margin-top: 12px;
 //   }
 // }
+// .btn-text {
+//   @apply text-[#988371] text-lg font-medium mr-1;
+//   &-left {
+//     @apply ml-1 mr-0;
+//   }
+// }
+// .input {
+//   @apply my-9 py-3 px-5 max-w-[100%] w-[100%] rounded-xl border-2 border-[#988371] font-medium text-lg text-[#000] focus:outline-none relative;
+// }
+// .vis-hidden {
+//   visibility: hidden;
+// }
+
+.main-slider {
+  .swiper {
+    max-width: 320px;
+    width: 100%;
+    height: 460px;
+  }
+  .swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 18px;
+    font-size: 22px;
+    font-weight: bold;
+    color: #fff;
+  }
+  .swiper-slide:nth-child(1n) {
+    background-color: #c2aa94;
+  }
+  .swiper-slide:nth-child(2n) {
+    background-color: #c9b7a7;
+  }
+  .swiper-slide:nth-child(3n) {
+    background-color: #b5a596;
+  }
+  &__add {
+    .swiper-slide:nth-child(1n) {
+      background-color: transparent;
+    }
+    .swiper-slide:nth-child(2n) {
+      background-color: transparent;
+    }
+    .swiper-slide:nth-child(3n) {
+      background-color: transparent;
+    }
+  }
+  @media (max-width: 375px) {
+    .swiper {
+      max-width: 290px;
+      width: 100%;
+      height: 340px;
+    }
+  }
+  @media (max-width: 350px) {
+    .swiper {
+      max-width: 260px;
+      width: 100%;
+      height: 300px;
+    }
+  }
+
+  @media (max-height: 600px) {
+    .swiper {
+      height: 260px;
+    }
+  }
+}
